Fix execution tests, and everything else required to run programm1.xml (#1)
* Finish TestInregrationFramework

Co-authored-by: Ona <no-reply@ona.com>

* ALL TESTS PASSING!

Co-authored-by: Ona <no-reply@ona.com>

* Cleanup

Co-authored-by: Ona <no-reply@ona.com>

* Cleanup ConfigurationBlockExecutor

Co-authored-by: Ona <no-reply@ona.com>

* Fix Config and all the OTHER things

Co-authored-by: Ona <no-reply@ona.com>

* Introduce global "iteration" limit which fixes the non-trivial tests

Co-authored-by: Ona <no-reply@ona.com>

---------

Co-authored-by: Ona <no-reply@ona.com>